Changed build.gradle file for tests to support JDK 11 (#7)