@@ -31,6 +31,8 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
+
+    jvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED', '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
     
     afterSuite { testDescriptor, result ->
         if (!testDescriptor.parent) {
